k8s/observability/40-postgres-exporter.yaml
---
# Source: prometheus-postgres-exporter/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-exporter
  namespace: monitoring
  labels:
    helm.sh/chart: prometheus-postgres-exporter-8.0.0
    app.kubernetes.io/name: prometheus-postgres-exporter
    app.kubernetes.io/instance: postgres-exporter
    app.kubernetes.io/version: "v0.19.1"
spec:
  type: ClusterIP
  ports:
    - port: 9187
      targetPort: 9187
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: prometheus-postgres-exporter
    app.kubernetes.io/instance: postgres-exporter
---
# Source: prometheus-postgres-exporter/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-exporter
  namespace: monitoring
  labels:
    helm.sh/chart: prometheus-postgres-exporter-8.0.0
    app.kubernetes.io/name: prometheus-postgres-exporter
    app.kubernetes.io/instance: postgres-exporter
    app.kubernetes.io/version: "v0.19.1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: prometheus-postgres-exporter
      app.kubernetes.io/instance: postgres-exporter
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prometheus-postgres-exporter
        app.kubernetes.io/instance: postgres-exporter
      annotations:
        checksum/config: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
        checksum/secrets: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
    spec:
      automountServiceAccountToken: false
      serviceAccountName: postgres-exporter
      securityContext:
        runAsGroup: 1001
        runAsNonRoot: true
        runAsUser: 1001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: prometheus-postgres-exporter
          args:
          - "--config.file=/etc/postgres_exporter.yml"
          - "--web.listen-address=:9187"
          image: "quay.io/prometheuscommunity/postgres-exporter:v0.19.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9187
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 50m
              memory: 64Mi
            requests:
              cpu: 10m
              memory: 32Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
          volumeMounts:
      priorityClassName: obs-background
      volumes:
